galaxy animation distortion fix

--- a/css/syntax-galaxy.css
+++ b/css/syntax-galaxy.css
@@ -82,9 +82,8 @@
   height: 15em;
   margin: 0;
   position: relative;
-
-  animation: orbit-movement 40s linear infinite;
   transform-style: preserve-3d;
+  animation: orbit-movement 40s linear infinite paused;
 }
 
 @keyframes orbit-movement {
@@ -132,7 +131,20 @@
   }
 }
 
-@keyframes cosmos-orbit-turn {
+.syntax-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  transition: 0.5s ease;
+  text-align: center;
+  cursor: pointer;
+  animation: reverse-orbit-rotation 40s linear infinite paused;
+}
+
+@keyframes reverse-orbit-rotation {
   0% {
     transform: rotate(0deg);
   }
@@ -150,7 +162,19 @@
   }
 }
 
-@keyframes cosmos-orbit-around {
+.syntax-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+
+  position: relative;
+
+  transition: 1s ease;
+  animation: cosmos-orbit-around 40s linear infinite;
+}
+
+@keyframes cosmos-transition {
   0% {
     transform: rotateY(-90deg) scale(0.4, 1.25) rotate(-15deg);
   }
@@ -168,33 +192,7 @@
   }
 }
 
-.syntax-block {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  position: absolute;
-  transition: 0.5s ease;
-  text-align: center;
-  cursor: pointer;
-
-  animation: cosmos-orbit-turn 40s linear infinite;
-}
-
-.syntax-block .syntax-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-items: center;
-
-  position: relative;
-
-  transition: 1s ease;
-  animation: cosmos-orbit-around 40s linear infinite;
-}
-
-.syntax-block img {
+.syntax-content img {
   position: relative;
   padding: 0.5em;
   background-color: #00adff;
@@ -203,7 +201,7 @@
   width: 2.5em;
 }
 
-.syntax-block p {
+.syntax-content p {
   display: none;
   color: #131416;
   position: absolute;
@@ -221,17 +219,14 @@
   bottom: -120%;
 }
 
-.syntax-cosmos:hover > {
-}
-
-.syntax-cosmos:hover > .syntax-block img {
+.syntax-content img:hover {
   opacity: 0.7;
   box-shadow: 0 0 10px #00adff;
 }
 
-.syntax-cosmos:hover > .syntax-block p,
-.syntax-cosmos:active > .syntax-block p,
-.syntax-cosmos:focus > .syntax-block p {
+.syntax-content:hover > p,
+.syntax-content:hover > p,
+.syntax-content:hover > p {
   display: block;
   opacity: 0.7;
   box-shadow: 0 0 10px #00adff;
